[package]
name = "serde-deserialize-over-derive"
version = "0.1.0"
authors = ["STEAMROLLER"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/steamroller-airmash/serde-deserialize-over"
public = false

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro-rules = "0.2"
proc-macro2 = "*"
proc-macro-crate = "0.1"

