[package]
name = "serde-deserialize-over-derive"
version = "0.1.0"
authors = ["STEAMROLLER"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/steamroller-airmash/serde-deserialize-over"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "0.1"

