[package]
name = "serde-deserialize-over-derive"
version = "0.1.2"
authors = ["STEAMROLLER"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/steamroller-airmash/serde-deserialize-over"
description = "Derive macros for serde-deserialize-over"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.1.3"

