[package]
name = "serde-deserialize-over"
version = "0.1.0"
authors = ["STEAMROLLER"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde-deserialize-over-derive = { path = "../serde-deserialize-over-derive" }

[dev-dependencies]
serde_json = "1.0"
serde_derive = "*"
