[package]
name = "serde-deserialize-over"
version = "0.1.0"
authors = ["STEAMROLLER"]
edition = "2018"
license = "MIT or Apache-2.0"
repository = "https://github.com/steamroller-airmash/serde-deserialize-over"
publish = false

[dependencies]
serde = "1.0"
serde-deserialize-over-derive = { path = "../serde-deserialize-over-derive" }

[dev-dependencies]
serde_json = "1.0"
