[package]
name = "serde-deserialize-over"
version = "0.1.1"
authors = ["STEAMROLLER"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/steamroller-airmash/serde-deserialize-over"
description = "Deserialize structs onto existing struct instances via serde"

exclude = [
  "/examples/**",
  "/tests/**",
]

[dependencies]
serde = "1.0"
serde-deserialize-over-derive = { version = "=0.1.1", path = "../serde-deserialize-over-derive" }

[dev-dependencies]
serde_json = "1.0"
serde_derive = "1.0"
